--- a/index.html
+++ b/index.html
@@ -19,30 +19,52 @@
     <div id="app">
         <div class="header">
             <h1>Vue.js Poster Store</h1>
+            <form class="searchbar" v-on:submit.prevent="onSubmit">
+                <input v-model="newsearch" placeholder="Search for Poster" type="text">
+                <input type="submit" value="Search" class="btn">
+            </form>
         </div>
         <div class="main">
             <div class="products">
+                <div v-if="loading">
+                    Loading....
+                </div>
+                <div class="search-results" v-else>
+                    Found {{ items.length}} results for search term {{ lastsearch }}
+                </div>
                 <div class="product" v-for="(item, index) in items">
-                    <h4 class="product-title">{{ item.title }}</h4>
-                    <button v-on:click="addItem(index)" class="add-to-cart">Add to cart</button>
+                    <div>
+                        <div class="product-image">
+                            <img v-bind:src="item.link">
+                        </div>
+                    </div>
+                    <div>
+                        <h4 class="product-title">{{ item.title }}</h4>
+                        <p>Price:
+                            <strong>{{ price | currency }}</strong>
+                        </p>
+                        <button v-on:click="addItem(index)" class="add-to-cart btn">Add to cart</button>
+                    </div>
                 </div>
             </div>
             <div class="cart">
                 <h2>Shopping Cart</h2>
-                <ul>
-                    <li class="cart-item" v-for="item in cart">
-                        <div class="item-title">
-                            {{ item.title }}
-                        </div>
-                        <span class="item-qty">{{ item.qty }}</span>
+                <transition-group name="fade" tag="ul">
+                    <li class="cart-item" v-for="item in cart" v-bind:key="item.id">
+                        <div class="item-title">{{ item.title }}</div>
+                        <span class="item-qty">{{ item.price | currency }} x {{ item.qty }}</span>
+                        <button class="btn" v-on:click="inc(item)">+</button>
+                        <button class="btn" v-on:click="dec(item)">-</button>
                     </li>
-                </ul>
-                <div v-if="cart.length">
-                   <div>Total: {{ total }}</div> 
-                </div>
+                </transition-group>
                 <div v-if="!cart.length" class="empty-cart">
                     No items in the cart.
                 </div>
+                <transition name="fade">
+                    <div v-if="cart.length">
+                        <div>Total: {{ total | currency}}</div>
+                    </div>
+                </transition>
             </div>
         </div>
     </div>
@@ -50,6 +72,7 @@
     <!-- Scripts -->
     <script src="/reload/reload.js"></script>
     <script src="node_modules/vue/dist/vue.js"></script>
+    <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
     <script type="text/javascript" src="public/script.js"></script>
 
 </body>
